<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/marginsize_small"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_asking_selecting"
        android:textSize="@dimen/textsize_med"
        />
    <CheckBox
        android:id="@+id/check_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_starting"
        android:textSize="@dimen/textsize_med"
        android:layout_marginTop="@dimen/marginsize_small"
        />
    <LinearLayout
        android:id="@+id/linear_sub"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize_med"
            android:text="@string/text_asking_favorite"
            android:layout_marginTop="@dimen/marginsize_small"
            />
        <RadioGroup
            android:id="@+id/rg_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/rb_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_malt"
                android:textSize="@dimen/textsize_small"
                />
            <RadioButton
                android:id="@+id/rb_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_cat"
                android:textSize="@dimen/textsize_small"
                />
            <RadioButton
                android:id="@+id/rb_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_puppy"
                android:textSize="@dimen/textsize_small"
                />
        <Button
            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_done"/>
        <ImageView
            android:id="@+id/img_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:layout_margin="@dimen/marginsize_small"
            android:src="@drawable/amlfu"
            />
    </LinearLayout>



</LinearLayout>